--- a/packages/mosaic/design-tokens/_variables.scss
+++ b/packages/mosaic/design-tokens/_variables.scss
@@ -1,43 +1,25 @@
 
 // Do not edit directly
-// Generated on Tue, 12 Jan 2021 08:47:55 GMT
+// Generated on Wed, 13 Jan 2021 12:25:11 GMT
 
-$light-color-primary-lighter: #57A4D7;
-$light-color-primary-default: #338FCC;
-$light-color-primary-darker: #206EA2;
-$light-color-primary-lighter-contrast: white;
-$light-color-primary-default-contrast: white;
-$light-color-primary-darker-contrast: white;
-$light-color-second-lighter: #E6E6E6;
-$light-color-second-default: #B3B3B3;
-$light-color-second-darker: #999999;
-$light-color-second-lighter-contrast: #4D4D4D;
-$light-color-second-default-contrast: #4D4D4D;
-$light-color-second-darker-contrast: white;
-$light-color-error-lighter: #FCEFEC;
-$light-color-error-default: #E76E5C;
-$light-color-error-darker: #E04D36;
-$light-color-error-lighter-contrast: #4D4D4D;
-$light-color-error-default-contrast: white;
-$light-color-error-darker-contrast: white;
-$light-color-info-lighter: #EBF4FB;
-$light-color-info-default: #AAD1EC;
-$light-color-info-darker: #57A4D7;
-$light-color-info-lighter-contrast: #4D4D4D;
-$light-color-info-default-contrast: #4D4D4D;
-$light-color-info-darker-contrast: white;
-$light-color-success-lighter: #EDF8E9;
-$light-color-success-default: #B4DEA4;
-$light-color-success-darker: #6FBA53;
-$light-color-success-lighter-contrast: #4D4D4D;
-$light-color-success-default-contrast: #4D4D4D;
-$light-color-success-darker-contrast: white;
-$light-color-warning-lighter: #FCF5E8;
-$light-color-warning-default: #F0D49B;
-$light-color-warning-darker: #DFA739;
-$light-color-warning-lighter-contrast: #4D4D4D;
-$light-color-warning-default-contrast: white;
-$light-color-warning-darker-contrast: white;
+$light-color-primary-lighter: 400;
+$light-color-primary-default: 500;
+$light-color-primary-darker: 600;
+$light-color-second-lighter: 100;
+$light-color-second-default: 300;
+$light-color-second-darker: 400;
+$light-color-error-lighter: 60;
+$light-color-error-default: 400;
+$light-color-error-darker: 500;
+$light-color-info-lighter: 60;
+$light-color-info-default: 200;
+$light-color-info-darker: 400;
+$light-color-success-lighter: 60;
+$light-color-success-default: 200;
+$light-color-success-darker: 400;
+$light-color-warning-lighter: 60;
+$light-color-warning-default: 200;
+$light-color-warning-darker: 400;
 $light-color-foreground-text: #4D4D4D;
 $light-color-foreground-text-less-contrast: #999999;
 $light-color-foreground-text-disabled: #B3B3B3;
@@ -55,42 +37,24 @@ $light-color-states-focused-color: #338FCC;
 $light-color-states-selected-color: #D8EAF7;
 $light-color-states-pressed-shadow: inset 0 1px 2px 0 rgba(black, 0.2);
 $light-color-states-disabled-opacity: 0.3;
-$dark-color-primary-lighter: #7FBAE1;
-$dark-color-primary-default: #57A4D7;
-$dark-color-primary-darker: #338FCC;
-$dark-color-primary-lighter-contrast: #4D4D4D;
-$dark-color-primary-default-contrast: white;
-$dark-color-primary-darker-contrast: white;
-$dark-color-second-lighter: #CCCCCC;
-$dark-color-second-default: #999999;
-$dark-color-second-darker: #4D4D4D;
-$dark-color-second-lighter-contrast: #4D4D4D;
-$dark-color-second-default-contrast: white;
-$dark-color-second-darker-contrast: white;
-$dark-color-error-lighter: #F4B7AE;
-$dark-color-error-default: #E76E5C;
-$dark-color-error-darker: #832112;
-$dark-color-error-lighter-contrast: #4D4D4D;
-$dark-color-error-default-contrast: white;
-$dark-color-error-darker-contrast: white;
-$dark-color-info-lighter: #AAD1EC;
-$dark-color-info-default: #57A4D7;
-$dark-color-info-darker: #114E77;
-$dark-color-info-lighter-contrast: #4D4D4D;
-$dark-color-info-default-contrast: white;
-$dark-color-info-darker-contrast: white;
-$dark-color-success-lighter: #B4DEA4;
-$dark-color-success-default: #6FBA53;
-$dark-color-success-darker: #276211;
-$dark-color-success-lighter-contrast: #4D4D4D;
-$dark-color-success-default-contrast: white;
-$dark-color-success-darker-contrast: white;
-$dark-color-warning-lighter: #F0D49B;
-$dark-color-warning-default: #DFA739;
-$dark-color-warning-darker: #7D5504;
-$dark-color-warning-lighter-contrast: #4D4D4D;
-$dark-color-warning-default-contrast: white;
-$dark-color-warning-darker-contrast: white;
+$dark-color-primary-lighter: 300;
+$dark-color-primary-default: 400;
+$dark-color-primary-darker: 500;
+$dark-color-second-lighter: 200;
+$dark-color-second-default: 400;
+$dark-color-second-darker: 700;
+$dark-color-error-lighter: 200;
+$dark-color-error-default: 400;
+$dark-color-error-darker: 700;
+$dark-color-info-lighter: 200;
+$dark-color-info-default: 400;
+$dark-color-info-darker: 700;
+$dark-color-success-lighter: 200;
+$dark-color-success-default: 400;
+$dark-color-success-darker: 700;
+$dark-color-warning-lighter: 200;
+$dark-color-warning-default: 400;
+$dark-color-warning-darker: 700;
 $dark-color-foreground-text: #F0F0F0;
 $dark-color-foreground-text-less-contrast: #999999;
 $dark-color-foreground-text-disabled: #999999;
@@ -104,7 +68,7 @@ $dark-color-background-background-disabled: #666666;
 $dark-color-background-overlay-hovered: rgba(black, 0.05);
 $dark-color-background-overlay-active: rgba(black, 0.1);
 $dark-color-background-overlay-disabled: rgba(white, 0.2);
-$dark-color-states-focused-color: #338FCC;
+$dark-color-states-focused-color: #57A4D7;
 $dark-color-states-selected-color: #114E77;
 $dark-color-states-pressed-shadow: inset 1px 2px 2px 0 rgba(black, 0.2);
 $dark-color-states-disabled-opacity: 0.3;
@@ -355,7 +319,7 @@ $button-light-color-second-active-border: darken(#B3B3B3, 5);
 $button-light-color-second-active-background: darken(#F0F0F0, 5);
 $button-light-color-error-border: #B3B3B3;
 $button-light-color-error-background: #F0F0F0;
-$button-light-color-error-color: #E76E5C;
+$button-light-color-error-color: 400;
 $button-light-color-error-icon: #E76E5C;
 $button-light-color-error-active-border: darken(#B3B3B3, 5);
 $button-light-color-error-active-background: darken(#F0F0F0, 5);
@@ -365,7 +329,7 @@ $button-dark-color-primary-border: #277BB3;
 $button-dark-color-primary-background: #338FCC;
 $button-dark-color-primary-icon: white;
 $button-dark-color-primary-active-border: darken(#277BB3, 5);
-$button-dark-color-primary-active-background: darken(#57A4D7, 5);
+$button-dark-color-primary-active-background: 400;
 $button-dark-color-second-border: #808080;
 $button-dark-color-second-background: #666666;
 $button-dark-color-second-color: #F0F0F0;
@@ -374,7 +338,7 @@ $button-dark-color-second-active-border: darken(#808080, 5);
 $button-dark-color-second-active-background: darken(#666666, 5);
 $button-dark-color-error-border: #808080;
 $button-dark-color-error-background: #666666;
-$button-dark-color-error-color: #E76E5C;
+$button-dark-color-error-color: 400;
 $button-dark-color-error-icon: #E76E5C;
 $button-dark-color-error-active-border: darken(#808080, 5);
 $button-dark-color-error-active-background: darken(#666666, 5);
@@ -386,30 +350,20 @@ $icon-button-size-border-radius: 3px;
 $icon-button-size-padding: 5px 7px;
 $icon-button-size-text-padding: 5px 7px;
 $icon-button-size-icon-padding: 5px 15px;
-$checkbox-light-color-border: #B3B3B3;
-$checkbox-light-color-states-checked-border: #206EA2;
-$checkbox-light-color-states-checked-background: #338FCC;
-$checkbox-light-color-states-focused-border: #206EA2;
-$checkbox-light-color-states-focused-shadow: inset 0 0 0 1px white, 0 0 0 1px #206EA2;
-$checkbox-dark-color-border: #999999;
-$checkbox-dark-color-states-checked-border: #7FBAE1;
+$checkbox-light-color-border: 300;
+$checkbox-light-color-states-checked-border: 600;
+$checkbox-light-color-states-checked-background: 500;
+$checkbox-light-color-states-focused-border: 600;
+$checkbox-light-color-states-focused-shadow: 600;
+$checkbox-dark-color-border: 400;
+$checkbox-dark-color-states-checked-border: 300;
 $checkbox-dark-color-states-checked-background: #206EA2;
-$checkbox-dark-color-states-focused-border: #57A4D7;
-$checkbox-dark-color-states-focused-shadow: inset 0 0 0 1px #333333, 0 0 0 1px #57A4D7;
+$checkbox-dark-color-states-focused-border: 400;
+$checkbox-dark-color-states-focused-shadow: 400;
 $checkbox-size-width: 16px;
 $checkbox-size-padding: 24px;
 $checkbox-size-border-width: 1px;
 $checkbox-size-toggle-box-shadow: inset 0 0 1px 0 rgba(0, 0, 0, 0.2);
-$popup-light-color-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.2);
-$popup-light-color-border: #B3B3B3;
-$popup-light-color-divider: #CCCCCC;
-$popup-light-color-background: white;
-$popup-light-color-footer-background: #F0F0F0;
-$popup-dark-color-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.2);
-$popup-dark-color-border: #999999;
-$popup-dark-color-divider: #666666;
-$popup-dark-color-background: #4D4D4D;
-$popup-dark-color-footer-background: transparent;
 $datepicker-toggle-size-width: 30px;
 $datepicker-toggle-size-height: 30px;
 $datepicker-body-size-label-padding-side: 33% / 7;
@@ -496,22 +450,32 @@ $popover-size-large-width: 640px;
 $popover-header-size-padding: 10px 16px;
 $popover-footer-size-padding: 12px 16px;
 $popover-footer-size-margin-top: 8px;
+$popup-light-color-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.2);
+$popup-light-color-border: 300;
+$popup-light-color-divider: #CCCCCC;
+$popup-light-color-background: white;
+$popup-light-color-footer-background: #F0F0F0;
+$popup-dark-color-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.2);
+$popup-dark-color-border: 400;
+$popup-dark-color-divider: #666666;
+$popup-dark-color-background: #4D4D4D;
+$popup-dark-color-footer-background: transparent;
 $progress-bar-light-color-background: #F0F0F0;
 $progress-bar-dark-color-background: #666666;
 $progress-bar-size-height: 4px;
 $progress-spinner-size-size: 16px;
-$radio-light-color-outer-circle-border: #B3B3B3;
+$radio-light-color-outer-circle-border: 300;
 $radio-light-color-inner-circle-border: transparent;
-$radio-light-color-outer-circle-checked-state-border: #338FCC;
+$radio-light-color-outer-circle-checked-state-border: 500;
 $radio-light-color-outer-circle-focused-state-border: #338FCC;
-$radio-light-color-outer-circle-focused-state-shadow: 0 0 0 2px #B3B3B3;
-$radio-light-color-inner-circle-checked-state-border: #338FCC;
+$radio-light-color-outer-circle-focused-state-shadow: 300;
+$radio-light-color-inner-circle-checked-state-border: 500;
 $radio-light-color-inner-circle-focused-state-shadow: 0 0 0 1px white;
-$radio-dark-color-outer-circle-border: #999999;
+$radio-dark-color-outer-circle-border: 400;
 $radio-dark-color-inner-circle-border: transparent;
-$radio-dark-color-outer-circle-checked-state-border: #57A4D7;
-$radio-dark-color-outer-circle-focused-state-border: #338FCC;
-$radio-dark-color-outer-circle-focused-state-shadow: 0 0 0 2px #338FCC;
+$radio-dark-color-outer-circle-checked-state-border: 400;
+$radio-dark-color-outer-circle-focused-state-border: #57A4D7;
+$radio-dark-color-outer-circle-focused-state-shadow: 0 0 0 2px #57A4D7;
 $radio-dark-color-inner-circle-checked-state-border: #206EA2;
 $radio-dark-color-inner-circle-focused-state-shadow: 0 0 0 1px #333333;
 $radio-size-size: 14px;
@@ -533,9 +497,9 @@ $table-size-border-width: 1px;
 $table-size-row-padding-vertical: 8px;
 $table-size-row-padding-horizontal: 16px;
 $tabs-light-color-border: #B3B3B3;
-$tabs-light-color-state-active: #338FCC;
+$tabs-light-color-state-active: 500;
 $tabs-dark-color-border: #B3B3B3;
-$tabs-dark-color-state-active: #57A4D7;
+$tabs-dark-color-state-active: 400;
 $tabs-size-height: 40px;
 $tabs-size-highlight-height: 4px;
 $tabs-size-padding-horizontal: 16px;
@@ -544,45 +508,45 @@ $tabs-size-border-radius: 3px;
 $tags-light-color-primary-background: #D8EAF7;
 $tags-light-color-primary-border: #D8EAF7;
 $tags-light-color-primary-icon: mix(#57A4D7, rgba(black, 0.05));
-$tags-light-color-primary-icon-hovered: #206EA2;
-$tags-light-color-primary-state-focused: #338FCC;
-$tags-light-color-primary-state-disabled: mix(#338FCC, transparent, 50%);
-$tags-light-color-primary-state-disabled-background: mix(#338FCC, transparent, 10%);
+$tags-light-color-primary-icon-hovered: 600;
+$tags-light-color-primary-state-focused: 500;
+$tags-light-color-primary-state-disabled: 500;
+$tags-light-color-primary-state-disabled-background: 500;
 $tags-light-color-second-background: #E6E6E6;
 $tags-light-color-second-border: #E6E6E6;
 $tags-light-color-second-icon: mix(#999999, rgba(black, 0.05));
-$tags-light-color-second-icon-hovered: #999999;
-$tags-light-color-second-state-focused: #338FCC;
-$tags-light-color-second-state-disabled: mix(#B3B3B3, transparent, 50%);
-$tags-light-color-second-state-disabled-background: mix(#B3B3B3, transparent, 10%);
+$tags-light-color-second-icon-hovered: 400;
+$tags-light-color-second-state-focused: 500;
+$tags-light-color-second-state-disabled: 300;
+$tags-light-color-second-state-disabled-background: 300;
 $tags-light-color-error-background: #FADEDA;
 $tags-light-color-error-border: #FADEDA;
 $tags-light-color-error-icon: mix(#E76E5C, rgba(black, 0.05));
-$tags-light-color-error-icon-hovered: #E04D36;
-$tags-light-color-error-state-focused: #E76E5C;
-$tags-light-color-error-state-disabled: mix(#E76E5C, transparent, 50%);
-$tags-light-color-error-state-disabled-background: mix(#E76E5C, transparent, 10%);
+$tags-light-color-error-icon-hovered: 500;
+$tags-light-color-error-state-focused: 400;
+$tags-light-color-error-state-disabled: 400;
+$tags-light-color-error-state-disabled-background: 400;
 $tags-dark-color-primary-background: #114E77;
 $tags-dark-color-primary-border: #114E77;
 $tags-dark-color-primary-icon: mix(#57A4D7, rgba(black, 0.05));
-$tags-dark-color-primary-icon-hovered: #338FCC;
-$tags-dark-color-primary-state-focused: #7FBAE1;
-$tags-dark-color-primary-state-disabled: mix(#57A4D7, transparent, 50%);
-$tags-dark-color-primary-state-disabled-background: mix(#57A4D7, transparent, 10%);
+$tags-dark-color-primary-icon-hovered: 500;
+$tags-dark-color-primary-state-focused: 300;
+$tags-dark-color-primary-state-disabled: 400;
+$tags-dark-color-primary-state-disabled-background: 400;
 $tags-dark-color-second-background: #4D4D4D;
 $tags-dark-color-second-border: #4D4D4D;
 $tags-dark-color-second-icon: mix(#999999, rgba(black, 0.05));
-$tags-dark-color-second-icon-hovered: #CCCCCC;
-$tags-dark-color-second-state-focused: #57A4D7;
-$tags-dark-color-second-state-disabled: mix(#999999, transparent, 50%);
-$tags-dark-color-second-state-disabled-background: mix(#999999, transparent, 10%);
+$tags-dark-color-second-icon-hovered: 200;
+$tags-dark-color-second-state-focused: 400;
+$tags-dark-color-second-state-disabled: 400;
+$tags-dark-color-second-state-disabled-background: 400;
 $tags-dark-color-error-background: #832112;
 $tags-dark-color-error-border: #832112;
 $tags-dark-color-error-icon: mix(#E76E5C, rgba(black, 0.05));
-$tags-dark-color-error-icon-hovered: #F4B7AE;
-$tags-dark-color-error-state-focused: #E76E5C;
-$tags-dark-color-error-state-disabled: mix(#E76E5C, transparent, 50%);
-$tags-dark-color-error-state-disabled-background: mix(#E76E5C, transparent, 10%);
+$tags-dark-color-error-icon-hovered: 200;
+$tags-dark-color-error-state-focused: 400;
+$tags-dark-color-error-state-disabled: 400;
+$tags-dark-color-error-state-disabled-background: 400;
 $tags-size-margin: 2px;
 $tags-size-height: 24px;
 $tags-size-border-width: 1px;
@@ -596,15 +560,15 @@ $tag-input-size-margin: 2px 4px;
 $textarea-size-min-height: 50px;
 $textarea-size-padding: 5px 16px;
 $toggle-light-color-border: #B3B3B3;
-$toggle-light-color-background: linear-gradient(to bottom, #E6E6E6, #F0F0F0);
+$toggle-light-color-background: 100;
 $toggle-light-color-circle-border: #B3B3B3;
-$toggle-light-color-circle-background: linear-gradient(to bottom, white, #E6E6E6);
-$toggle-light-color-state-focused: inset 0 0 0 1px white, 0 0 0 2px #338FCC;
+$toggle-light-color-circle-background: 100;
+$toggle-light-color-state-focused: 500;
 $toggle-dark-color-border: #808080;
 $toggle-dark-color-background: #333333;
 $toggle-dark-color-circle-border: #808080;
 $toggle-dark-color-circle-background: white;
-$toggle-dark-color-state-focused: inset 0 0 0 1px #333333, 0 0 0 2px #57A4D7;
+$toggle-dark-color-state-focused: 400;
 $toggle-size-height: 16px;
 $toggle-size-width: 28px;
 $toggle-size-border-radius: 9px;
