fixed code smells and added in exclusions autogenerated files

--- a/packages/mosaic/core/theming/prebuilt/dark-theme.scss
+++ b/packages/mosaic/core/theming/prebuilt/dark-theme.scss
@@ -2,7 +2,10 @@
 
 
 $primary: mc-palette(
-    $dark-color-primary-palette, $dark-color-primary-lighter, $dark-color-primary-default, $dark-color-primary-darker
+    $dark-color-primary-palette,
+    $dark-color-primary-lighter,
+    $dark-color-primary-default,
+    $dark-color-primary-darker
 );
 $second: mc-palette(
     $dark-color-second-palette, $dark-color-second-lighter, $dark-color-second-default, $dark-color-second-darker
