--- a/packages/mosaic/button/_button-theme.scss
+++ b/packages/mosaic/button/_button-theme.scss
@@ -61,7 +61,9 @@
         &.mc-error {
             &.cdk-keyboard-focused {
                 border-color: map-get(map-get($theme, states), focused-color);
-                box-shadow: inset 0 0 0 1px map-get($background, background), 0 0 0 1px map-get(map-get($theme, states), focused-color);
+                box-shadow:
+                    inset 0 0 0 1px map-get($background, background),
+                    0 0 0 1px map-get(map-get($theme, states), focused-color);
             }
         }
 
